--- a/location.html
+++ b/location.html
@@ -12,11 +12,15 @@
     <nav>
         <div class="nav-wrapper">
             <form>
-                <div class="input-field">
-                    <input id="search" type="search" required>
-                    <label for="search"><i class="material-icons">search</i></label>
-                    <i class="material-icons">close</i>
-                </div>
+                <!--<div class="input-field">-->
+                <!--<input id="search" type="search" required>-->
+                <!--<label for="search"><i class="material-icons">search</i></label>-->
+                <!--<span class="material-icons" id="search_button">search</span>-->
+                <!--</div>-->
+
+                <input id="search_text" type="search" required>
+                <label for="search_text"><i class="material-icons">search</i></label>
+                <i class="material-icons" id="search_button">search</i>
             </form>
         </div>
     </nav>
@@ -27,10 +31,10 @@
         <i class="material-icons">add</i>
     </a>
     <!--<ul>-->
-        <!--<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>-->
-        <!--<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>-->
-        <!--<li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>-->
-        <!--<li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>-->
+    <!--<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>-->
+    <!--<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>-->
+    <!--<li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>-->
+    <!--<li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>-->
     <!--</ul>-->
 </div>
 <!--  Scripts-->
