--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <a href="#!" class="brand-logo">Logo</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">Javascript</a></li>
-            <li><a href="mobile.html">Mobile</a></li>
+            <li><a href="location.html">添加位置</a></li>
+            <li><a href="#">删除位置</a></li>
+            <li><a href="#">刷新</a></li>
+            <li><a href="#">设置</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">Javascript</a></li>
-            <li><a href="mobile.html">Mobile</a></li>
+            <li><a href="location.html">添加位置</a></li>
+            <li><a href="#">删除位置</a></li>
+            <li><a href="#">刷新</a></li>
+            <li><a href="#">设置</a></li>
         </ul>
     </div>
 </nav>
