--- a/index.html
+++ b/index.html
@@ -28,55 +28,134 @@
     </div>
 </nav>
 
+<div class="card ">
+    <div>
+        <p id="current_temp" class="left">14℃</p>
+        <p class="center">
+            <span id="current_phrase">Cloundy</span>
+            <br>
+            <span id="city_name">Shanghai</span>
+        </p>
+    </div>
+    <div>
+        <table>
+            <tr>
+                <td>
+                    <div id="temper_high_div" class="center">
+                        <div>High</div>
+                        <img src="res/drawable-hdpi/currnet_high_b.png">
+                        <div id="temp_high_value"></div>
+                    </div>
+                </td>
+                <td>
+                    <div id="temper_low_div" class="center">
+                        <div>Low</div>
+                        <img src="res/drawable-hdpi/currnet_low_b.png">
+                        <div id="temper_low_value"></div>
+                    </div>
+                </td>
+                <td>
+                    <div id="precipitation_div" class="center">
+                        <div>Precipitation</div>
+                        <img src="res/drawable-hdpi/currnet_preciptation_b.png">
+                        <div id="precipitation_value"></div>
+                    </div>
+                </td>
+                <td>
+                    <div id="humidity_div" class="center">
+                        <div>Humidity</div>
+                        <img src="res/drawable-hdpi/currnet_humidity_b.png">
+                        <div id="humidity_value"></div>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
 
-<div class="card container">
-    <ul class="collapsible" data-collapsible="accordion">
-        <li>
-            <div class="collapsible-header">
-                <p id="current_temp" class="left">14</p>
-                <p class="center">
-                    <span id="current_phrase">Cloundy</span>
-                    <br>
-                    <span id="city_name">Shanghai</span>
-                </p>
-            </div>
-            <div class="collapsible-body">
-                <table>
-                    <tr>
-                        <td>
-                            <div id="temper_high_div" class="center">
-                                <div>High</div>
-                                <img src="res/drawable-hdpi/currnet_high_b.png">
-                                <div id="temp_high_value">18</div>
-                            </div>
-                        </td>
-                        <td>
-                            <div id="temper_low_div" class="center">
-                                <div>Low</div>
-                                <img src="res/drawable-hdpi/currnet_low_b.png">
-                                <div id="temper_low_value">18</div>
-                            </div>
-                        </td>
-                        <td>
-                            <div id="precipitation_div" class="center">
-                                <div>Precipitation</div>
-                                <img src="res/drawable-hdpi/currnet_preciptation_b.png">
-                                <div id="precipitation_value">18</div>
-                            </div>
-                        </td>
-                        <td>
-                            <div id="humidity_div" class="center">
-                                <div>Humidity</div>
-                                <img src="res/drawable-hdpi/currnet_humidity_b.png">
-                                <div id="humidity_value">18</div>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </li>
-    </ul>
+    <div>
+        <table>
+            <tr>
+                <td>
+                    <div id="visibility_div" class="center">
+                        <div>Visibility</div>
+                        <img src="res/drawable-hdpi/currnet_visibility_b.png">
+                        <div id="visibility_value"></div>
+                    </div>
+                </td>
+                <td>
+                    <div id="wind_div" class="center">
+                        <div>Wind Speed</div>
+                        <img src="res/drawable-hdpi/currnet_wind_b.png">
+                        <div id="wind_value"></div>
+                    </div>
+                </td>
+                <td>
+                    <div id="pressure_div" class="center">
+                        <div>Pressure</div>
+                        <img src="res/drawable-hdpi/currnet_pressure_b.png">
+                        <div id="pressure_value">1</div>
+                    </div>
+                </td>
+                <td>
+                    <div id="uv_index_div" class="center">
+                        <div>UV index</div>
+                        <img src="res/drawable-hdpi/currnet_uv_b.png">
+                        <div id="uv_index_value"></div>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
+
+<!--<div class="card container">-->
+<!--<ul class="collapsible" data-collapsible="accordion">-->
+<!--<li>-->
+<!--<div class="collapsible-header">-->
+<!--<p id="current_temp" class="left">14</p>-->
+<!--<p class="center">-->
+<!--<span id="current_phrase">Cloundy</span>-->
+<!--<br>-->
+<!--<span id="city_name">Shanghai</span>-->
+<!--</p>-->
+<!--</div>-->
+<!--<div class="collapsible-body">-->
+<!--<table>-->
+<!--<tr>-->
+<!--<td>-->
+<!--<div id="temper_high_div" class="center">-->
+<!--<div>High</div>-->
+<!--<img src="res/drawable-hdpi/currnet_high_b.png">-->
+<!--<div id="temp_high_value">18</div>-->
+<!--</div>-->
+<!--</td>-->
+<!--<td>-->
+<!--<div id="temper_low_div" class="center">-->
+<!--<div>Low</div>-->
+<!--<img src="res/drawable-hdpi/currnet_low_b.png">-->
+<!--<div id="temper_low_value">18</div>-->
+<!--</div>-->
+<!--</td>-->
+<!--<td>-->
+<!--<div id="precipitation_div" class="center">-->
+<!--<div>Precipitation</div>-->
+<!--<img src="res/drawable-hdpi/currnet_preciptation_b.png">-->
+<!--<div id="precipitation_value">18</div>-->
+<!--</div>-->
+<!--</td>-->
+<!--<td>-->
+<!--<div id="humidity_div" class="center">-->
+<!--<div>Humidity</div>-->
+<!--<img src="res/drawable-hdpi/currnet_humidity_b.png">-->
+<!--<div id="humidity_value">18</div>-->
+<!--</div>-->
+<!--</td>-->
+<!--</tr>-->
+<!--</table>-->
+<!--</div>-->
+<!--</li>-->
+<!--</ul>-->
+<!--</div>-->
 
 <p id="console_p"></p>
 
