--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="materialize/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
@@ -28,7 +32,7 @@
     </div>
 </nav>
 
-<div class="card ">
+<div class="card container">
     <div>
         <p id="current_temp" class="left">14℃</p>
         <p class="center">
@@ -37,132 +41,114 @@
             <span id="city_name">Shanghai</span>
         </p>
     </div>
-    <div>
-        <table>
-            <tr>
-                <td>
-                    <div id="temper_high_div" class="center">
-                        <div>High</div>
-                        <img src="res/drawable-hdpi/currnet_high_b.png">
-                        <div id="temp_high_value"></div>
-                    </div>
-                </td>
-                <td>
-                    <div id="temper_low_div" class="center">
-                        <div>Low</div>
-                        <img src="res/drawable-hdpi/currnet_low_b.png">
-                        <div id="temper_low_value"></div>
-                    </div>
-                </td>
-                <td>
-                    <div id="precipitation_div" class="center">
-                        <div>Precipitation</div>
-                        <img src="res/drawable-hdpi/currnet_preciptation_b.png">
-                        <div id="precipitation_value"></div>
-                    </div>
-                </td>
-                <td>
-                    <div id="humidity_div" class="center">
-                        <div>Humidity</div>
-                        <img src="res/drawable-hdpi/currnet_humidity_b.png">
-                        <div id="humidity_value"></div>
-                    </div>
-                </td>
-            </tr>
-        </table>
+
+    <div class="row">
+        <div id="temper_high_div" class="center col-md-3 col-xs-3">
+            <div>High</div>
+            <img src="res/drawable-hdpi/currnet_high_b.png">
+            <div id="temp_high_value"></div>
+        </div>
+        <div id="temper_low_div" class="center col-md-3 col-xs-3">
+            <div>Low</div>
+            <img src="res/drawable-hdpi/currnet_low_b.png">
+            <div id="temper_low_value"></div>
+        </div>
+        <div id="precipitation_div" class="center col-md-3 col-xs-3">
+            <div>Precipitation</div>
+            <img src="res/drawable-hdpi/currnet_preciptation_b.png">
+            <div id="precipitation_value"></div>
+        </div>
+        <div id="humidity_div" class="center col-md-3 col-xs-3">
+            <div>Humidity</div>
+            <img src="res/drawable-hdpi/currnet_humidity_b.png">
+            <div id="humidity_value"></div>
+        </div>
     </div>
 
-    <div>
-        <table>
-            <tr>
-                <td>
-                    <div id="visibility_div" class="center">
-                        <div>Visibility</div>
-                        <img src="res/drawable-hdpi/currnet_visibility_b.png">
-                        <div id="visibility_value"></div>
-                    </div>
-                </td>
-                <td>
-                    <div id="wind_div" class="center">
-                        <div>Wind Speed</div>
-                        <img src="res/drawable-hdpi/currnet_wind_b.png">
-                        <div id="wind_value"></div>
-                    </div>
-                </td>
-                <td>
-                    <div id="pressure_div" class="center">
-                        <div>Pressure</div>
-                        <img src="res/drawable-hdpi/currnet_pressure_b.png">
-                        <div id="pressure_value">1</div>
-                    </div>
-                </td>
-                <td>
-                    <div id="uv_index_div" class="center">
-                        <div>UV index</div>
-                        <img src="res/drawable-hdpi/currnet_uv_b.png">
-                        <div id="uv_index_value"></div>
-                    </div>
-                </td>
-            </tr>
+    <div class="row">
+        <div id="visibility_div" class="center col-md-3 col-xs-3">
+            <div>Visibility</div>
+            <img src="res/drawable-hdpi/currnet_visibility_b.png">
+            <div id="visibility_value"></div>
+        </div>
+        <div id="wind_div" class="center col-md-3 col-xs-3">
+            <div>Wind</div>
+            <img src="res/drawable-hdpi/currnet_wind_b.png">
+            <div id="wind_value"></div>
+        </div>
+        <div id="pressure_div" class="center col-md-3 col-xs-3">
+            <div>Pressure</div>
+            <img src="res/drawable-hdpi/currnet_pressure_b.png">
+            <div id="pressure_value"></div>
+        </div>
+        <div id="uv_index_div" class="center col-md-3 col-xs-3">
+            <div>UV</div>
+            <img src="res/drawable-hdpi/currnet_uv_b.png">
+            <div id="uv_index_value"></div>
+        </div>
+    </div>
+</div>
+
+<div class="card container">
+    <div class="table-responsive">
+        <table class="table" id="hourly_table">
+            <!--<tr class="center">-->
+            <!--<td>11:00</td>-->
+            <!--<td>11:00</td>-->
+            <!--<td>11:00</td>-->
+            <!--<td>11:00</td>-->
+            <!--<td>11:00</td>-->
+            <!--<td>11:00</td>-->
+            <!--<td>11:00</td>-->
+            <!--<td>11:00</td>-->
+            <!--<td>11:00</td>-->
+            <!--<td>11:00</td>-->
+            <!--<td>11:00</td>-->
+            <!--</tr>-->
+            <!--<tr class="center">-->
+            <!--<td>sunny</td>-->
+            <!--<td>sunny</td>-->
+            <!--<td>sunny</td>-->
+            <!--<td>sunny</td>-->
+            <!--<td>sunny</td>-->
+            <!--<td>sunny</td>-->
+            <!--<td>sunny</td>-->
+            <!--<td>sunny</td>-->
+            <!--<td>sunny</td>-->
+            <!--<td>sunny</td>-->
+            <!--<td>sunny</td>-->
+            <!--</tr>-->
+            <!--<tr class="center">-->
+            <!--<td>12</td>-->
+            <!--<td>12</td>-->
+            <!--<td>12</td>-->
+            <!--<td>12</td>-->
+            <!--<td>12</td>-->
+            <!--<td>12</td>-->
+            <!--<td>12</td>-->
+            <!--<td>12</td>-->
+            <!--<td>12</td>-->
+            <!--<td>12</td>-->
+            <!--</tr>-->
         </table>
     </div>
 </div>
 
-<!--<div class="card container">-->
-<!--<ul class="collapsible" data-collapsible="accordion">-->
-<!--<li>-->
-<!--<div class="collapsible-header">-->
-<!--<p id="current_temp" class="left">14</p>-->
-<!--<p class="center">-->
-<!--<span id="current_phrase">Cloundy</span>-->
-<!--<br>-->
-<!--<span id="city_name">Shanghai</span>-->
-<!--</p>-->
-<!--</div>-->
-<!--<div class="collapsible-body">-->
-<!--<table>-->
-<!--<tr>-->
-<!--<td>-->
-<!--<div id="temper_high_div" class="center">-->
-<!--<div>High</div>-->
-<!--<img src="res/drawable-hdpi/currnet_high_b.png">-->
-<!--<div id="temp_high_value">18</div>-->
-<!--</div>-->
-<!--</td>-->
-<!--<td>-->
-<!--<div id="temper_low_div" class="center">-->
-<!--<div>Low</div>-->
-<!--<img src="res/drawable-hdpi/currnet_low_b.png">-->
-<!--<div id="temper_low_value">18</div>-->
-<!--</div>-->
-<!--</td>-->
-<!--<td>-->
-<!--<div id="precipitation_div" class="center">-->
-<!--<div>Precipitation</div>-->
-<!--<img src="res/drawable-hdpi/currnet_preciptation_b.png">-->
-<!--<div id="precipitation_value">18</div>-->
-<!--</div>-->
-<!--</td>-->
-<!--<td>-->
-<!--<div id="humidity_div" class="center">-->
-<!--<div>Humidity</div>-->
-<!--<img src="res/drawable-hdpi/currnet_humidity_b.png">-->
-<!--<div id="humidity_value">18</div>-->
-<!--</div>-->
-<!--</td>-->
-<!--</tr>-->
-<!--</table>-->
-<!--</div>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</div>-->
+<div class="card container">
+    <ul id="daily_ul">
+    </ul>
+</div>
 
 <p id="console_p"></p>
 
 <!--  Scripts-->
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>-->
 <script src="materialize/js/materialize.js"></script>
 <script src="js/Utils.js"></script>
 <script src="js/init.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
