--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav" id="mobile-demo">
                     <li><a href="location.html">添加位置</a></li>
-                    <li><a href="#">删除位置</a></li>
                     <li><a href="#">刷新</a></li>
                     <li><a href="#">设置</a></li>
                 </ul>
@@ -121,7 +120,8 @@
 
 <!--  Scripts-->
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+<!--<script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>-->
+<script src="js/jquery-3.0.0.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="owl-carousel/owl.carousel.js"></script>
 <!--<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>-->
