--- a/location.html
+++ b/location.html
@@ -4,27 +4,22 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link href="materialize-v0.97.6/materialize/css/materialize.min.css" rel="stylesheet">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
 <div>
-    <nav>
-        <div class="nav-wrapper">
-            <form onsubmit="return false;">
-                <!--<div class="input-field">-->
-                <!--<input id="search" type="search" required>-->
-                <!--<label for="search"><i class="material-icons">search</i></label>-->
-                <!--<span class="material-icons" id="search_button">search</span>-->
-                <!--</div>-->
-                <!--<input type="text" name="txt" value="Hello" onchange="alert(this.value)">-->
-                <input id="search_text" type="search" required>
-                <!--<label for="search_text"><i class="material-icons">search</i></label>-->
-                <!--<i class="material-icons" id="search_button">search</i>-->
-            </form>
+    <form onsubmit="return false;">
+        <div class="form-group">
+            <div class="col-md-1 col-xs-1 text-center vertical_center">
+                <img src="res/drawable-hdpi/ic_arrow_back_black_24dp.png">
+            </div>
+            <div class="col-md-11 col-xs-11 location_form">
+                <input id="search_text" type="search" class="form-control">
+            </div>
         </div>
-    </nav>
+    </form>
+
 </div>
 
 <div>
@@ -35,7 +30,7 @@
 
 <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
     <a class="btn-floating btn-large waves-effect waves-light red" id="locate_button">
-        <i class="material-icons">add</i>
+        <i class="material-icons">定位</i>
     </a>
     <!--<ul>-->
     <!--<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>-->
