--- a/location.html
+++ b/location.html
@@ -28,6 +28,13 @@
     </ul>
 </div>
 
+
+<div>
+    <table id="search_history">
+
+    </table>
+</div>
+
 <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
     <a class="btn-floating btn-large waves-effect waves-light red" id="locate_button">
         <i class="material-icons">定位</i>
